examples/valid/contagem_regressiva.mc
int contador = 3;

while (contador > 0) {
    print(contador);
    contador = contador - 1;
}

print("fim");
