examples/invalid/condicao_invalida.mc
int valor = 1;

if (valor) {
    print("invalido");
}
